create post card and tags card

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src", "src/declaration.d.ts"]
 }
