--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "remixicon": "^3.2.0",
+    "resolve-url-loader": "^5.0.0",
     "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
