--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
     "framer-motion": "^10.12.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -18,6 +19,7 @@
     "react-scripts": "5.0.1",
     "remixicon": "^3.2.0",
     "resolve-url-loader": "^5.0.0",
+    "sweetalert2": "^11.7.3",
     "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
