--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.12.2",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "remixicon": "^3.2.0",
     "resolve-url-loader": "^5.0.0",
     "sweetalert2": "^11.7.3",
     "typescript": "^5.0.4",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
