--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
+    "boring-avatars": "^1.7.0",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.12.2",
     "moment": "^2.29.4",
